force-app/main/default/objects/Ghost_Draft_API__c/Ghost_Draft_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ghost Draft API</label>
</CustomObject>