force-app/main/default/objects/Ghost_Draft_API__c/fields/Commencement_URL__c.field-meta.xml
<CustomField>
    <fullName>Commencement_URL__c</fullName>
    <label>Commencement URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>