force-app/main/default/objects/Ghost_Draft_API__c/fields/Final_Award_URL__c.field-meta.xml
<CustomField>
    <fullName>Final_Award_URL__c</fullName>
    <label>Final Award URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>