force-app/main/default/objects/Ghost_Draft_API__c/fields/Interim_Award_URL__c.field-meta.xml
<CustomField>
    <fullName>Interim_Award_URL__c</fullName>
    <label>Interim Award URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>