force-app/main/default/objects/Ghost_Draft_API__c/fields/Settlement_URL__c.field-meta.xml
<CustomField>
    <fullName>Settlement_URL__c</fullName>
    <label>Settlement URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>